<resources>
    <string name="app_name">Quiz App</string>
    <string name="rosie">Rosie</string>
    <string name="ceapa">Ceapa</string>
    <string name="castravete">Castravete</string>
    <string name="varza">Varza</string>
    <string name="what_vegetables">Ce legume sunt prezentate in imaginea de mai sus?</string>
    <string name="ardei">Ardei</string>
    <string name="cartof">Cartof</string>
    <string name="do_you_this_vegetable">Ce leguma este prezentata in imaginea de mai sus?</string>
    <string name="brocoli">Brocoli</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="which_is_a_pepper">Care dintre urmatoarele imagini contine un ardei?</string>
    <string name="which_grows_in_soil">Care din legumele de mai jos creste in pamant?</string>
    <string name="vegetables_quiz">Vegetables Quiz!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="submit_answers">Submit answers</string>
    <string name="title_submit_answers">Congratulations!  You finished the questions.   Submit your answers.</string>
    <string name="what_vegetable_is_that">Ce leguma este prezentata in imaginea de mai sus?</string>
    <string name="choose_a_tomato">Alegeti din imaginile de mai jos o rosie?</string>
</resources>
