<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:src="@drawable/three_vegetables"/>

    <TextView
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:gravity="center_horizontal"
        android:padding="16dp"
        style="@style/SubQuestion"
        android:text="@string/what_vegetables"
        />

    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/question_title"
        android:paddingLeft="72dp"
        android:paddingStart="72dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/answer_1"
            style="@style/checkbox_text"
            android:text="@string/rosie"/>

        <CheckBox
            android:id="@+id/answer_2"
            style="@style/checkbox_text"
            android:text="@string/ceapa"/>

        <CheckBox
            android:id="@+id/answer_3"
            style="@style/checkbox_text"
            android:text="@string/castravete"/>

        <CheckBox
            android:id="@+id/answer_4"
            style="@style/checkbox_text"
            android:text="@string/varza"/>

    </LinearLayout>


    <Button
        android:id="@+id/back_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/question"
        android:layout_marginBottom="28dp"
        style="@style/Button"
        android:onClick="changeLayout"
        android:text="Back"/>

    <Button
        android:id="@+id/next_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/question"
        android:layout_alignRight="@+id/question"
        android:onClick="changeLayout"
        style="@style/Button"
        android:text="Next"/>


</RelativeLayout>
