<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:src="@drawable/brocoli_512"/>

    <TextView
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_margin_16dp"
        style="@style/SubQuestion"
        android:text="@string/do_you_this_vegetable"
        />

    <RadioGroup
        android:id="@+id/answers_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingLeft="72dp"
        android:paddingStart="72dp"
        android:orientation="vertical"
        android:layout_below="@id/question_title">


        <RadioButton
            android:id="@+id/answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/castravete"/>


        <RadioButton
            android:id="@+id/answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/rosie"/>

        <RadioButton
            android:id="@+id/answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/ardei"/>

        <RadioButton
            android:id="@+id/answer_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/brocoli"/>

    </RadioGroup>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answers_group"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/question"
        android:text="Back"
        style="@style/Button"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back"
        android:layout_alignEnd="@+id/question"
        android:layout_alignRight="@+id/question"
        android:text="Next"
        style="@style/Button"/>


</RelativeLayout>
