<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:gravity="center_horizontal"
        style="@style/Question"
        android:text="@string/which_is_a_pepper"/>

    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/question"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/answer_1"
            style="@style/checkbox_image"
            android:drawableRight="@drawable/morcov_512"/>

        <CheckBox
            android:id="@+id/answer_2"
            style="@style/checkbox_image"
            android:drawableRight="@drawable/ardei_galben_512"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/first_layout"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/answer_3"
            style="@style/checkbox_image"
            android:drawableRight="@drawable/ardei_portocaliu_512"/>

        <CheckBox
            android:id="@+id/answer_4"
            style="@style/checkbox_image"
            android:drawableRight="@drawable/ridiche_alba_512"/>

    </LinearLayout>


    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/question"
        android:layout_alignStart="@+id/question"
        android:text="@string/back"
        style="@style/Button"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back"
        android:layout_alignEnd="@+id/question"
        android:layout_alignRight="@+id/question"
        android:text="@string/next"
        style="@style/Button"/>


</RelativeLayout>
